Fix sign-in word-wrap at /login (bug 875233)

--- a/media/css/mkt/header.styl
+++ b/media/css/mkt/header.styl
@@ -205,6 +205,7 @@ input:invalid ~ .search-clear {
     // 'Sign In'
     &.browserid {
         display: none;
+        word-wrap: normal;
         &.loading-submit {
             animation(unquote('0.9s spin infinite steps(30)'));
             background: url(../../img/mkt/btn_spinner_18.png) center no-repeat;
